--- a/src/Lab_4/CMakeLists.txt
+++ b/src/Lab_4/CMakeLists.txt
@@ -1,17 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lab32)
+project(Lab_4)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  nav_msgs
-  geometry_msgs
-  message_generation
-)
+find_package(catkin REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -54,10 +47,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   Pathsrv.srv
- )
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,12 +61,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs
-   nav_msgs
-   geometry_msgs
- )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 ###################################
 ## catkin specific configuration ##
@@ -85,8 +77,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES lab32
-  CATKIN_DEPENDS roscpp rospy std_msgs nav_msgs geometry_msgs message_runtime
+#  LIBRARIES Lab_4
+#  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
 
@@ -97,24 +89,21 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-)
 
 ## Declare a cpp library
-# add_library(lab32
-#   src/${PROJECT_NAME}/lab32.cpp
+# add_library(Lab_4
+#   src/${PROJECT_NAME}/Lab_4.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(lab32_node src/lab32_node.cpp)
+# add_executable(Lab_4_node src/Lab_4_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(lab32_node lab32_generate_messages_cpp)
+# add_dependencies(Lab_4_node Lab_4_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(lab32_node
+# target_link_libraries(Lab_4_node
 #   ${catkin_LIBRARIES}
 # )
 
@@ -133,7 +122,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS lab32 lab32_node
+# install(TARGETS Lab_4 Lab_4_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -158,7 +147,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_lab32.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_Lab_4.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
